--- a/bsf_user/package.json
+++ b/bsf_user/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node ./node_modules/vite/bin/vite.js build",
+    "vercel-build": "npm install && node ./node_modules/vite/bin/vite.js build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -19,13 +23,16 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
+    "react-spinner-timer": "^1.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "vite": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -35,7 +42,6 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.1"
+    "globals": "^16.0.0"
   }
 }
